add photo taking & display
- using [android permission dispatcher](https://github.com/hotchemi/PermissionsDispatcher) to manage runtime permission granting
- add retrolambda too so we can write less boilerplate code

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#004D40</color>
+    <color name="button_disabled_background">#C0C0C0</color>
 </resources>
