--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,30 +33,54 @@
                 android:id="@+id/chosen_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/btn_take_photo"
+                android:layout_above="@+id/choose_image"
                 android:background="#EEEEEE"
                 android:contentDescription="@string/content_description_chosen_image"/>
 
-            <Button
-                android:id="@+id/btn_take_photo"
-                style="@style/ButtonStyle"
+            <LinearLayout
+                android:id="@+id/choose_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/btn_send"
+                android:layout_above="@+id/btn_match"
                 android:layout_marginTop="10dp"
-                android:onClick="onClickButtonTakePhoto"
-                android:text="@string/btn_take_photo"/>
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_take_photo"
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:drawablePadding="@dimen/btn_drawable_padding"
+                    android:drawableTop="@drawable/ic_camera_enhance_white_24dp"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="@string/btn_take_photo"/>
+
+                <Button
+                    android:id="@+id/btn_select_from_gallery"
+                    style="@style/ButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawablePadding="@dimen/btn_drawable_padding"
+                    android:drawableTop="@drawable/ic_photo_library_white_24dp"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="@string/btn_select_from_gallery"/>
+
+            </LinearLayout>
 
             <Button
-                android:id="@+id/btn_send"
+                android:id="@+id/btn_match"
                 style="@style/ButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:onClick="onClickButtonTakePhoto"
-                android:text="@string/btn_send"/>
+                android:text="@string/btn_match"/>
 
         </RelativeLayout>
     </LinearLayout>
