--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,13 +28,55 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
 
-            <ImageView
-                android:id="@+id/chosen_image"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/choose_image"
-                android:background="#EEEEEE"
-                android:contentDescription="@string/content_description_chosen_image"/>
+                android:layout_above="@+id/choose_image">
+
+                <ImageView
+                    android:id="@+id/chosen_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#EEEEEE"
+                    android:contentDescription="@string/content_description_chosen_image"
+                    tools:src="@drawable/placeholder_cat"/>
+
+                <FrameLayout
+                    android:id="@+id/match_progress"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/matching_banner_height"
+                    android:layout_gravity="bottom"
+                    android:background="@color/imageInfo"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
+
+                        <ProgressBar
+                            android:id="@+id/match_progressbar"
+                            style="@style/WhiteProgressBar"
+                            android:layout_width="@dimen/progress_bar_size"
+                            android:layout_height="@dimen/progress_bar_size"
+                            android:layout_margin="6dp"
+                            android:indeterminate="true"/>
+
+                        <TextView
+                            android:id="@+id/matching_progress_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="@string/matching"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp"/>
+
+                    </LinearLayout>
+                </FrameLayout>
+
+            </FrameLayout>
 
             <LinearLayout
                 android:id="@+id/choose_image"
@@ -50,6 +91,7 @@
                     style="@style/ButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:drawablePadding="@dimen/btn_drawable_padding"
