--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#004D40</color>
     <color name="button_disabled_background">#C0C0C0</color>
+
+    <color name="imageInfo">#bfffc107</color>
+    <color name="progressAccent">#E91E63</color>
+    <color name="progressTint">#b3b3b3</color>
 </resources>
