--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="btn_drawable_padding">6dp</dimen>
+    <dimen name="progress_bar_size">30dp</dimen>
+    <dimen name="matching_banner_height">120dp</dimen>
 </resources>
