animate the layout change

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/choose_image">
+                android:layout_above="@+id/choose_image"
+                android:animateLayoutChanges="true">
 
                 <ImageView
                     android:id="@+id/chosen_image"
