--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
     <dimen name="btn_drawable_padding">6dp</dimen>
     <dimen name="progress_bar_size">30dp</dimen>
     <dimen name="matching_banner_height">120dp</dimen>
+    <dimen name="about_text_size">18sp</dimen>
+    <dimen name="about_vertical_spacing">10dp</dimen>
+    <dimen name="logo_width">180dp</dimen>
 </resources>
