tweak drawer header & menu icons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/chosen_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#EEEEEE"
+                    android:background="@color/default_image_bg"
                     android:contentDescription="@string/content_description_chosen_image"
                     tools:src="@drawable/placeholder_cat"/>
 
