--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,54 +9,49 @@
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tool_bar"
         android:layout_centerInParent="true"
         android:background="@android:color/white"
+        android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/about_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/about_vertical_spacing_large"
             android:text="@string/about_app"
             android:textSize="@dimen/about_text_size"/>
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/about_info"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:orientation="vertical">
+            android:layout_gravity="center_horizontal"
+            android:text="@string/collaboration"
+            android:textSize="@dimen/about_text_size"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/about_vertical_spacing"
-                android:text="@string/collaboration"
-                android:textSize="@dimen/about_text_size"/>
+        <ImageView
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/logo_xebia"/>
 
-            <ImageView
-                android:layout_width="@dimen/logo_width"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/about_vertical_spacing"
-                android:src="@drawable/logo_xebia"/>
+        <ImageView
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/about_vertical_spacing"
+            android:src="@drawable/logo_cellenza"/>
 
-            <ImageView
-                android:layout_width="@dimen/logo_width"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/about_vertical_spacing"
-                android:src="@drawable/logo_cellenza"/>
+        <ImageView
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/about_vertical_spacing"
+            android:src="@drawable/logo_microsoft"/>
 
-            <ImageView
-                android:layout_width="@dimen/logo_width"
-                android:layout_height="wrap_content"
-                android:src="@drawable/logo_microsoft"/>
-        </LinearLayout>
-
-    </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
