--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="progress_bar_size">30dp</dimen>
     <dimen name="matching_banner_height">120dp</dimen>
     <dimen name="about_text_size">18sp</dimen>
+    <dimen name="about_vertical_spacing_large">40dp</dimen>
     <dimen name="about_vertical_spacing">10dp</dimen>
-    <dimen name="logo_width">180dp</dimen>
+    <dimen name="logo_width">172dp</dimen>
 </resources>
