--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00796B</color>
-    <color name="colorAccent">#004D40</color>
+    <color name="colorPrimary">#6A1B9A </color>
+    <color name="colorPrimaryDark">#6A1B9A</color>
+    <color name="colorAccent">#FFC107</color>
     <color name="button_disabled_background">#C0C0C0</color>
 
-    <color name="imageInfo">#bfffc107</color>
+    <color name="imageInfo">#bfE5007D</color>
     <color name="progressAccent">#E91E63</color>
     <color name="progressTint">#b3b3b3</color>
     <color name="default_image_bg">#EEEEEE</color>
